--- a/_publications/2023-04-01-J1.md
+++ b/_publications/2023-04-01-J1.md
@@ -1,12 +1,12 @@
 ---
-title: "[J1] Advanced user interfaces for teleoperated surgical robotic systems"
+title: "[J1] Advanced User Interfaces for Teleoperated Surgical Robotic Systems"
 collection: publications
-permalink: /publication/2023-04-01-Advanced-user-interfaces-for-teleoperated-surgical-robotic-systems
+permalink: /publication/2023-04-01-Advanced-User-Interfaces-for-Teleoperated-Surgical-Robotic-Systems
 excerpt: ''
 date: 2023-04-01
 venue: 'Advanced Sensor Research'
 paperurl: 'https://onlinelibrary.wiley.com/doi/full/10.1002/adsr.202200036'
-citation: 'Chi Cong, Nguyen. (2023). "Advanced user interfaces for teleoperated surgical robotic systems" <i>Advanced Sensor Research</i>. Vol2(2200036).'
+citation: 'Chi Cong, Nguyen. (2023). "Advanced User Interfaces for Teleoperated Surgical Robotic Systems" <i>Advanced Sensor Research</i>. Vol2(2200036).'
 ---
 **Abstract**
 -----
