--- a/_publications/2023-08-01-J3.md
+++ b/_publications/2023-08-01-J3.md
@@ -1,12 +1,12 @@
 ---
-title: "[J3] Development of a soft robotic catheter for vascular intervention surgery (VIS)"
+title: "[J3] Development of A Soft Robotic Catheter for Vascular Intervention Surgery (VIS)"
 collection: publications
-permalink: /publication/2023-08-01-Development-of-a-soft-robotic-catheter-for-vascular-intervention-surgery
+permalink: /publication/2023-08-01-Development-of-A-Soft-Robotic-Catheter-for-Vascular-Intervention-Surgery
 excerpt: ''
 date: 2023-08-01
 venue: 'Sensors and Actuators A: Physical'
 paperurl: 'https://www.sciencedirect.com/science/article/abs/pii/S0924424723002297'
-citation: 'Chi Cong, Nguyen. (2023). "Development of a soft robotic catheter for vascular intervention surgery" <i>Sensors and Actuators A: Physical</i>. Vol357(114380).'
+citation: 'Chi Cong, Nguyen. (2023). "Development of A Soft Robotic Catheter for Vascular Intervention Surgery" <i>Sensors and Actuators A: Physical</i>. Vol357(114380).'
 ---
 **Abstract**
 -----
