--- a/_publications/2023-09-10-Collab.md
+++ b/_publications/2023-09-10-Collab.md
@@ -11,61 +11,61 @@ citation: ''
 
 <div class="excerpt-content">
   <p>
-[1] Thai, M. T., Phan, P. T., Tran, H. A., <strong>Nguyen, C. C.</strong>, Hoang, T. T., Davies, J., ... & Do, T. N. (2023). Advanced soft robotic system for in situ 3D bioprinting and endoscopic surgery. Advanced Science, 10(12), 2205656.
+[1] Thai, M. T., Phan, P. T., Tran, H. A., <strong style="color: orange;">Nguyen, C. C.</strong>, Hoang, T. T., Davies, J., ... & Do, T. N. (2023). Advanced soft robotic system for in situ 3D bioprinting and endoscopic surgery. Advanced Science, 10(12), 2205656.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[2] Hoang, T. T., Phan, P. T., Thai, M. T., Davies, J., <strong>Nguyen, C. C.</strong>, Phan, H. P., ... & Do, T. N. (2022). Magnetically engineered conductivity of soft liquid metal composites for robotic, wearable electronic, and medical applications. Advanced Intelligent Systems, 4(12), 2200282.
+[2] Hoang, T. T., Phan, P. T., Thai, M. T., Davies, J., <strong style="color: orange;">Nguyen, C. C.</strong>, Phan, H. P., ... & Do, T. N. (2022). Magnetically engineered conductivity of soft liquid metal composites for robotic, wearable electronic, and medical applications. Advanced Intelligent Systems, 4(12), 2200282.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[3] Davies, J., Thai, M. T., Hoang, T. T., <strong>Nguyen, C. C.</strong>, Phan, P. T., Phan, H. P., ... & Do, T. N. (2023). A stretchable filament sensor with tunable sensitivity for wearable robotics and healthcare applications. Advanced Materials Technologies, 8(6), 2201453.
+[3] Davies, J., Thai, M. T., Hoang, T. T., <strong style="color: orange;">Nguyen, C. C.</strong>, Phan, P. T., Phan, H. P., ... & Do, T. N. (2023). A stretchable filament sensor with tunable sensitivity for wearable robotics and healthcare applications. Advanced Materials Technologies, 8(6), 2201453.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[4] Phan, P. T., Thai, M. T., Hoang, T. T., Davies, J., <strong>Nguyen, C. C.</strong>, Phan, H. P., ... & Do, T. N. (2022). Smart textiles using fluid-driven artificial muscle fibers. Scientific reports, 12(1), 11067.
+[4] Phan, P. T., Thai, M. T., Hoang, T. T., Davies, J., <strong style="color: orange;">Nguyen, C. C.</strong>, Phan, H. P., ... & Do, T. N. (2022). Smart textiles using fluid-driven artificial muscle fibers. Scientific reports, 12(1), 11067.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[5] Zhao, S., <strong>Nguyen, C. C.</strong>, Hoang, T. T., Do, T. N., & Phan, H. P. (2023). Transparent Pneumatic Tactile Sensors for Soft Biomedical Robotics. Sensors, 23(12), 5671.
+[5] Zhao, S., <strong style="color: orange;">Nguyen, C. C.</strong>, Hoang, T. T., Do, T. N., & Phan, H. P. (2023). Transparent Pneumatic Tactile Sensors for Soft Biomedical Robotics. Sensors, 23(12), 5671.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[6] Hoang, T.T., Sy, L., Bussu, M., Thai, M.T., Low, H., Phan, P.T., Davies, J., <strong>Nguyen, C. C.</strong>, Lovell, N.H. and Do, T.N., 2021. A wearable soft fabric sleeve for upper limb augmentation. Sensors, 21(22), p.7638.
+[6] Hoang, T.T., Sy, L., Bussu, M., Thai, M.T., Low, H., Phan, P.T., Davies, J., <strong style="color: orange;">Nguyen, C. C.</strong>, Lovell, N.H. and Do, T.N., 2021. A wearable soft fabric sleeve for upper limb augmentation. Sensors, 21(22), p.7638.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[7] Phan, P.T., Welch, D., Spiggle, J., Thai, M.T., Hoang, T.T., Davies, J., <strong>Nguyen, C. C.</strong>, Zhu, K., Phan, H.P., Lovell, N.H. and Do, T.N., 2023. Fabrication, nonlinear modeling, and control of woven hydraulic artificial muscles for wearable applications. Sensors and Actuators A: Physical, 360, p.114555.
+[7] Phan, P.T., Welch, D., Spiggle, J., Thai, M.T., Hoang, T.T., Davies, J., <strong style="color: orange;">Nguyen, C. C.</strong>, Zhu, K., Phan, H.P., Lovell, N.H. and Do, T.N., 2023. Fabrication, nonlinear modeling, and control of woven hydraulic artificial muscles for wearable applications. Sensors and Actuators A: Physical, 360, p.114555.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[8] Woods, A., <strong>Nguyen, C. C.</strong>, Islam, M. S. U., Lovell, N. H., Do, T. N., & Tsai, D. Towards a single-use, low-cost endoscope for gastroenterological diagnostics.
+[8] Woods, A., <strong style="color: orange;">Nguyen, C. C.</strong>, Islam, M. S. U., Lovell, N. H., Do, T. N., & Tsai, D. Towards a single-use, low-cost endoscope for gastroenterological diagnostics.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[9] Davies, J., Thai, M. T., Hoang, T. T., <strong>Nguyen, C. C.</strong>, Phan, P. T., Zhu, K., ... & Do, T. N. (2023, May). A Flexible 3D Force Sensor with In-Situ Tunable Sensitivity. In 2023 IEEE International Conference on Robotics and Automation (ICRA) (pp. 581-587). IEEE.
+[9] Davies, J., Thai, M. T., Hoang, T. T., <strong style="color: orange;">Nguyen, C. C.</strong>, Phan, P. T., Zhu, K., ... & Do, T. N. (2023, May). A Flexible 3D Force Sensor with In-Situ Tunable Sensitivity. In 2023 IEEE International Conference on Robotics and Automation (ICRA) (pp. 581-587). IEEE.
 </p>
 </div>
 
 <div class="excerpt-content">
   <p>
-[10] Davies, J., Phan, P.T., Huang, D., Hoang, T.T., Low, H., Thai, M.T., <strong>Nguyen, C. C.</strong>, Nicotra, E., Lovell, N.H. and Do, T.N., 2022, May. Hydraulically actuated soft tubular gripper. In 2022 International Conference on Robotics and Automation (ICRA) (pp. 6144-6150). IEEE.
+[10] Davies, J., Phan, P.T., Huang, D., Hoang, T.T., Low, H., Thai, M.T., <strong style="color: orange;">Nguyen, C. C.</strong>, Nicotra, E., Lovell, N.H. and Do, T.N., 2022, May. Hydraulically actuated soft tubular gripper. In 2022 International Conference on Robotics and Automation (ICRA) (pp. 6144-6150). IEEE.
   </p>
 </div>
 [See my Google scholar](https://scholar.google.com/citations?user=q0oMHaYAAAAJ&hl=en)
