--- a/_publications/2023-07-05-J2.md
+++ b/_publications/2023-07-05-J2.md
@@ -15,7 +15,10 @@ citation: 'Chi Cong, Nguyen. (2023). "A Handheld Hydraulic Soft Robotic Device W
 Minimally invasive surgery (MIS) has evolved as an effective method for cardiovascular diseases (CVDs) and gastrointestinal (GI) cancers. Recently, soft robotic catheters using soft materials have attracted considerable attention thanks to their ability to navigate through intricate anatomical structures and perform precisely controlled movements. However, current systems are powered by rigid pull-wire mechanism, showing substantial nonlinear hysteresis and high force loss. Furthermore, they require several actuators to manipulate the bending tip for working in the intricate anatomical corners of the internal organs. For thrombus removal, the approach of stent retrieval via a catheter has various drawbacks including difficult manipulation, insufficient retrieval force, and complexity. Herein, new soft robotic catheters are introduced to address these challenges. The new catheters can achieve bidirectional bending motion and spiral shapes using a single soft actuation source. They are equipped with a portable and ergonomic control interface. Mathematical models for the bending effector are developed and experimentally validated. The new soft robotic catheters potentially allow for quicker and more accurate manipulation to reach any target inside the cardiac and GI regions, enabling faster and more targeted ablation and thrombus removal therapy to enhance patient outcomes. 
   </p>
 </div>
-[PDF](https://drive.google.com/file/d/1zYttcikO3ERVIetWi9fbCQRN9AwHLr6Z/view?usp=drive_link)
+[PDF](https://drive.google.com/file/d/1UwA_GYwfIiBaUOyBB7S5KUIUzIJ7Q3UB/view?usp=sharing)
 -----
 **Graphical Abstract**
-![GA](/images/J2.png)
+<div style="text-align: center;">
+  <img src='/images/J2.png' width='500' alt='J2' style='border-radius: 50px;'>
+</div>
+
